--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "Sortable Tables On GitHub",
-  "version": "1.1",
+  "name": "Sortable Tables for GitHub",
+  "version": "1.2",
   "description": "Makes GitHub markdown tables sortable.",
-  "manifest_version": 3,
+  "manifest_version": 4,
   "permissions": ["storage"],
   "icons": { 
     "128": "128.png" 
